--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -58,7 +58,7 @@ highlight_languages = ["r"]  # Add support for highlighting additional languages
 
 # Enable LaTeX math rendering? true/false
 #   If false, you can enable math on a per page basis as needed.
-math = false
+math = true
 
 # Enable diagram rendering? true/false
 #   If false, you can enable diagrams on a per page basis as needed.
@@ -78,7 +78,7 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 ############################
 
 # Set to true to disable code folding
-disable_codefolding = false
+disable_codefolding = true
 # Set to "hide" or "show" all codes by default
 codefolding_show = "hide"
 # Set to true to exclude the "Show/hide all" button
