--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,17 +18,17 @@
   url = "/post"
   weight = 40
 
-#[[main]]
-#  name = "CV & RÉSUMÉ"
-#  identifier = "cv"
-#  url = "#"
-#  weight = 50
+[[main]]
+  name = "CV"
+  identifier = "cv"
+  url = "#"
+  weight = 50
   
-#[[main]]
-#  name = "CV"
-#  parent = "cv"
-#  url = "/cv/index.html"
-#  weight = 50.1
+[[main]]
+  name = "CV"
+  parent = "cv"
+  url = "/cv/index.html"
+  weight = 50.1
   
 #[[main]]
 #  name = "RÉSUMÉ"
