--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,7 +44,7 @@ local_business_type = ""
 org_name = ""
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "A data science blog by Julia Silge"
+description = "A data science blog by Lucas Bagge"
 
 ############################
 ## Site Features
