--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -1,22 +1,19 @@
 # Theme metadata
-name = "Brendan's Theme"
+name = "julia"
 
 # Is theme light or dark?
 light = true
 
 # Primary
-primary = "#88BDBC"
-
-# Links
-link = "#DAAD86"
-link_hover = "#88BDBC"
+primary = "#8486B2"
 
 # Menu
-menu_primary = "#88BDBC" 
-menu_text = "#fff"
-menu_text_active = "#254E58"
-menu_title = "#fff"
+menu_primary = "#ffffff"
+menu_text = "#333"
+menu_text_active = "#8486B2"
+menu_title = "#333"
 
-# Home sections
-home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(255, 255, 255)"
+# Backgrounds
+background = "#ffffff"
+home_section_odd = "#ffffff"
+home_section_even = "#ffffff"
