--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,16 @@
 [build]
+  command = "hugo --gc --minify -b $URL"
   publish = "public"
-  command = "hugo"
-[context.production.environment]
-  HUGO_VERSION = "0.74.3"
-  HUGO_ENV = "production"
+
+[build.environment]
+  HUGO_VERSION = "0.80.0"
   HUGO_ENABLEGITINFO = "true"
-[context.branch-deploy.environment]
-  HUGO_VERSION = "0.74.3"
-[context.deploy-preview.environment]
-  HUGO_VERSION = "0.74.3"
+
+[context.production.environment]
+  HUGO_ENV = "production"
+
+[context.deploy-preview]
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+
+[context.branch-deploy]
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
