--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,6 +20,11 @@
   weight = 10
 
 [[main]]
+  name = "Git"
+  url = "git"
+  weight = 10
+  
+[[main]]
   name = "About"
   url = "about"
   weight = 20
